content/core/2.1.0/umbraco-v8/reference/vendr-umbraco-startup/vendr-umbraco-composing-collectionbuilders/README.md
---
title: Vendr.Umbraco.Composing.CollectionBuilders
description: API reference for Vendr.Umbraco.Composing.CollectionBuilders in Vendr, the eCommerce solution for Umbraco
---
## Vendr.Umbraco.Composing.CollectionBuilders namespace

| Public Type | Description |
| --- | --- |
| class [AmountAdjusterCollectionBuilder](amountadjustercollectionbuilder/) |  |
| class [CartAdvancedFilterCollectionBuilder](cartadvancedfiltercollectionbuilder/) |  |
| class [DiscountRewardProviderCollectionBuilder](discountrewardprovidercollectionbuilder/) |  |
| class [DiscountRuleProviderCollectionBuilder](discountruleprovidercollectionbuilder/) |  |
| class [DummyCollection&lt;TItem&gt;](dummycollection-1/) |  |
| class [EventHandlerCollectionBuilder&lt;TEvent&gt;](eventhandlercollectionbuilder-1/) |  |
| abstract class [LazyCollectionBuilderBase&lt;TBuilder,TCollection,TItem&gt;](lazycollectionbuilderbase-3/) |  |
| class [OrderAdvancedFilterCollectionBuilder](orderadvancedfiltercollectionbuilder/) |  |
| abstract class [OrderedCollectionBuilderBase&lt;TBuilder,TCollection,TItem&gt;](orderedcollectionbuilderbase-3/) |  |
| class [OrderFinderCollectionBuilder](orderfindercollectionbuilder/) |  |
| class [PaymentProviderCollectionBuilder](paymentprovidercollectionbuilder/) |  |
| class [PipelineTaskCollectionBuilder&lt;TCollection,TItem&gt;](pipelinetaskcollectionbuilder-2/) |  |
| class [PipelineTaskCollectionBuilder&lt;TCollection,TItem,TResult&gt;](pipelinetaskcollectionbuilder-3/) |  |
| class [PriceAdjusterCollectionBuilder](priceadjustercollectionbuilder/) |  |
| class [RegisteredCustomerInfoProviderCollectionBuilder](registeredcustomerinfoprovidercollectionbuilder/) |  |
| class [UmbracoNodeStoreFinderCollectionBuilder](umbraconodestorefindercollectionbuilder/) |  |

<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Umbraco.Startup.dll -->
